--- a/fe/package.json
+++ b/fe/package.json
@@ -12,6 +12,7 @@
     "@ant-design/nextjs-registry": "^1.0.2",
     "antd": "^5.24.5",
     "next": "15.2.4",
+    "next-auth": "^5.0.0-beta.25",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
